--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ platformdirs==4.3.6
 pycodestyle==2.12.1
 pyflakes==3.2.0
 sqlparse==0.4.3
+djangorestframework==3.14.0
+django-debug-toolbar==3.7.0
+drf-spectacular==0.26.5
+Pillow==10.3.0
+
