--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,12 @@
 services:
-   cinema:
+   theatre:
        build:
            context: .
        ports:
            - "8001:8000"
-       volumes:
-           - ./:/app
-           - my_media:/files/media
        command: >
-           sh -c "python manage.py wait_for_db &&
-                             python manage.py migrate &&
-                             python manage.py runserver 0.0.0.0:8000"
+           sh -c " python manage.py migrate &&
+                    python manage.py runserver 0.0.0.0:8000"
        depends_on:
            - db
        env_file:
@@ -23,9 +19,3 @@ services:
            - .env
        ports:
            - "5432:5432"
-       volumes:
-           - my_db:/var/lib/postgresql/data
-
-volumes:
-    my_db:
-    my_media:
