--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,11 @@ services:
            context: .
        ports:
            - "8001:8000"
+       volumes:
+           - ./:/app
        command: >
-           sh -c " python manage.py migrate &&
-                    python manage.py runserver 0.0.0.0:8000"
+           sh -c "python manage.py migrate &&
+                        python manage.py runserver 0.0.0.0:8000"
        depends_on:
            - db
        env_file:
@@ -19,3 +21,7 @@ services:
            - .env
        ports:
            - "5432:5432"
+       volumes:
+           -   my_db:$PGDATA
+volumes:
+    my_db:
