--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,11 @@ services:
            - "8001:8000"
        volumes:
            - ./:/app
+           - my_media:/files/media
        command: >
-           sh -c "python manage.py migrate &&
-                        python manage.py runserver 0.0.0.0:8000"
+           sh -c "python manage.py makemigrations &&
+                  python manage.py migrate &&
+                  python manage.py runserver 0.0.0.0:8000"
        depends_on:
            - db
        env_file:
@@ -25,3 +27,4 @@ services:
            -   my_db:$PGDATA
 volumes:
     my_db:
+    my_media:
